deploy/bitwarden-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ivaisoft
